--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.5",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^6.4.4",
     "cytoscape": "^3.31.1",
     "d3": "^7.9.0",
