--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,10 @@
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^6.4.4",
     "cytoscape": "^3.31.1",
-    "d3": "^7.9.0",
-    "gojs": "^3.0.19",
-    "gojs-react": "^1.1.2",
+    "depcheck": "^1.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "reactflow": "^11.11.4",
-    "vis-network": "^9.1.9"
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
